--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skip_missing_interpreters = true
 
 [testenv]
 deps = -e.[tests]
-  git+https://github.com/pytest-dev/pytest-play.git@selenium
+  git+https://github.com/pytest-dev/pytest-play.git@features
   -e.[tests]
 commands = python -m pytest {posargs:tests}
 
